Fixing padding of my work page on mobile.

--- a/src/style.css
+++ b/src/style.css
@@ -178,5 +178,9 @@ footer a:hover {
   .get-in-touch {
     margin-top: -30px;
   }
+
+  .my-work {
+    padding-bottom: 25px;
+  }
  
 }
